temp/objects/ii_Program_Membership__c.object
<CustomObject>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cohort 1</fullName>
                </value>
                <value>
                    <fullName>Cohort 2</fullName>
                </value>
                <value>
                    <fullName>Cohort 3</fullName>
                </value>
                <value>
                    <fullName>Cohort 4</fullName>
                </value>
                <value>
                    <fullName>Cohort 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intern_Report__c</fullName>
        <defaultValue>&quot;https://imagineinstitute.lightning.force.com/lightning/r/Report/00O3u000006NIAIEA4/view&quot;</defaultValue>
        <label>Intern Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Intern_Status__c</fullName>
        <label>Intern Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Memberships</relationshipLabel>
        <relationshipName>Program_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mentor_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ii_Program_Membership__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Mentor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ii_Program_Membership__c</referenceTo>
        <relationshipLabel>Interns</relationshipLabel>
        <relationshipName>Mentor_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentor_Report__c</fullName>
        <defaultValue>&quot;https://imagineinstitute.lightning.force.com/lightning/r/ContentDocument/0693u000007HOhpAAG/view&quot;</defaultValue>
        <label>Mentor Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mentor_Status__c</fullName>
        <label>Mentor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.ii_Mentor_Program__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Memberships (Mentoring)</relationshipLabel>
        <relationshipName>Mentor_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Member__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Type__c</fullName>
        <label>Participant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Apprentice Participant</fullName>
                </value>
                <value>
                    <fullName>Apprentice Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Member__r.FirstName + &quot; &quot; + Member__r.LastName + &quot; - &quot; + RecordType.Name + &quot; &quot; + IF(RecordType.DeveloperName = &quot;Mentor&quot;, TEXT(Fiscal_Year__c),  TEXT(Mentor_Program__r.Fiscal_Year__c)) + &quot; &quot; + IF(RecordType.DeveloperName = &quot;Mentor&quot;, TEXT(Mentor_Status__c),  TEXT(Intern_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stars_Id__c</fullName>
        <formula>Member__r.ii_Stars_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stars Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Approved_Mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State-Approved Mentor</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Membership</label>
    <nameField>
        <displayFormat>Program-Member-{0000}</displayFormat>
        <label>Program Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Memberships</pluralLabel>
    <recordTypes>
        <fullName>Intern</fullName>
        <active>true</active>
        <label>Intern</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentor</fullName>
        <active>true</active>
        <label>Imagine U Mentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PREPARE</fullName>
        <active>true</active>
        <label>PREPARE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>